# cpp_many_tasks

./: .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  README.md  run_linter.sh
any/: any.h  readme.md
bad-hash/: input.txt  readme.md  run.cpp
bad-rand/: input.txt  readme.md  run.cpp
bin-pow/: binpow.h  readme.md  test.cpp
bot/: CMakeLists.txt  readme.md  test_scenarios.md
bot/fake/: fake.cpp  fake.h  fake_data.cpp  fake_data.h  fake_main.cpp
bot/telegram/: api.cpp  api.h  bot.cpp  bot.h  client.cpp  client.h  main.cpp
bot/tests/: test_api.cpp  test_scenarios.cpp  test_scenarios.h
calculator/: calculator.h  eval.h  readme.md  test.cpp
coredump/: flag.txt  report.md
cow-vector/: cow_vector.h  readme.md  test.cpp
decoder/: CMakeLists.txt  decoder.h  readme.md
dedup/: dedup.h  readme.md  test.cpp
deque/: deque.h  readme.md  test.cpp
diff-pairs/: CMakeLists.txt  diff_pairs.h  readme.md  test.cpp
docs/: SETUP.md
dungeon/: rogue.h  test.cpp
editor/: editor.h  random.txt  readme.md  test.cpp
entrance/: entrance.h  readme.md  test.cpp
factorization/: factorization.h  test.cpp
fast-dither/: CMakeLists.txt  dither.h  kd_tree.h  readme.md
filter-even/: filter_even.h  readme.md  test.cpp
find-last/: find_last.h  readme.md  test.cpp
flaky/: flag.txt  report.md
fold/: fold.h  readme.md  test.cpp
functors/: functors.h  readme.md  test.cpp
gcd/: CMakeLists.txt  gcd.cpp  input.txt  readme.md
gdb-nosym/: flag.txt  report.md
gdb-sym/: flag.txt  report.md
hello-http/: CMakeLists.txt  readme.md  test.cpp  weather.cpp  weather.h
hello-http/fake/: fake_data.cpp  fake_data.h  fake_server.h
intrusive-list/: intrusive_list.h
itertools/: itertools.h  readme.md  test.cpp
list/: list.h  readme.md
local-max/: local_max.h  readme.md  test.cpp
long-sum/: CMakeLists.txt  long_sum.h  readme.md  test.cpp
lru-cache/: lru_cache.h  test.cpp
matrix/: matrix.h  readme.md  test.cpp
multiplication/: multiplication.h  readme.md  test.cpp
optional/: CMakeLists.txt  optional.h  readme.md
partition/: partition.h  readme.md  test.cpp
permutations/: permutations.h  readme.md  test.cpp
pimpl/: CMakeLists.txt  bad.h  good.cpp  readme.md  ugly.cpp  ugly.h
polish-notation/: CMakeLists.txt  polish_notation.h  test.cpp
pt-triangle/: CMakeLists.txt  point_triangle.h  readme.md  test.cpp
quadratic/: quadratic.h  test.cpp
range/: CMakeLists.txt  range.h  test.cpp
raytracer-b2/: CMakeLists.txt  readme.md
raytracer-b2/tests/: test.cpp
raytracer-debug/: readme.md  stub.txt
raytracer-geom/: geometry.h  (+6 more)
(+95 files in other folders)
